--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>I am a Quality Assurance Analyst in Delhi.</p>
     <p> I am pursuing Master of Computer Application from Ajay Kumar Garg Engineering College, Ghaziabad(U.P.)
 , India</p>
-    <p>I am currently working in N.S. Matrix Pvt. Ltd., Delhi,</p>
+    <p>I am currently working in N.S. Matrix Pvt. Ltd., Delhi</p>
     <h2>Credentials and Portfolio</h2>
 
   <p><a href="resume.html"> My Resume</a> | <a href="https://github.com/ChiragGupta1">My GitHub</a></p>
