--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
   <body>
     <hr>
 
-    <img src="images/headshot.jpg" alt="Chirag Gupta's headshot" width="20%">
+    <img src="images/Chirag.jpg" alt="Chirag Gupta's headshot" width="20%">
 
     <h1>Chirag Gupta</h1>
     <h4> Software Testing Engineer</h4>
