--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <body>
-    <img src="images/landscape.jpg" width="50%" alt="banner">
+    <img src="images/landscape.jpg" width="50%" height="75%" alt="banner">
     <h1>Chirag Gupta's Portal</h1>
     <h2>About Me</h2>
     <p>I am a Quality Assurance Analyst in Delhi.</p>
